--- a/public/index.html
+++ b/public/index.html
@@ -146,14 +146,14 @@
       <div id="chat-messages" class="chat-messages">
         <div class="message assistant-message">
           <p>
-            Hello! I'm an LLM chat app powered by Cloudflare Workers AI. How can
-            I help you today?
+            Hi! I'm Jane, Paul's personal assistant. How can
+            I help you?
           </p>
         </div>
       </div>
 
       <div class="typing-indicator" id="typing-indicator">
-        AI is thinking...
+        Jane is thinking...
       </div>
 
       <div class="message-input">
@@ -168,7 +168,7 @@
     </div>
 
     <footer>
-      <p>Cloudflare Workers AI Chat Template &copy; 2025</p>
+      <p>Powered by GenAI</p>
     </footer>
 
     <!-- Chat app script -->
