--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,8 @@
   </head>
   <body>
     <header>
-      <h1>Cloudflare AI Chat</h1>
-      <p>Powered by Cloudflare Workers AI</p>
+      <h1>Looking to connect with Paul?</h1>
+      <p>Please work with Jane, Paul's Personal Assistant.</p>
     </header>
 
     <div class="chat-container">
