--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
   <body>
     <header>
       <h1>Looking to connect with Paul?</h1>
-      <p>Please work with Jane, Paul's Personal Assistant.</p>
+      <p>Jane can help!</p>
     </header>
 
     <div class="chat-container">
